add digital font for Screen

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body {
     margin: 0;
     background: black;
   }
+
+  @font-face{
+    font-family:'digital-clock-font';
+    src: url('./assets/digital-7.mono.ttf');
+   }
